
2.4.0.8
-------

Added wxScrolledPanel from Wil Sadkin

Added SetShape method to top level windows (e.g. wxFrame.)

Changed wxSWIG to not generate Python code using apply, (since it will
be deprecated in the future) wxSWIG will use spam(*args, **kw) syntax
instead.  Also changed the generated __repr__ methods to be a bit more
informative.




2.4.0.7
-------
Gave up on generating a warning upon the use of the old true/false or
TRUE/FALSE values.

Fixed wxGenericTreeCtrl (used on wxGTK and wxMac for wxTreeCtrl) so
that it can successfully handle lots of nodes instead of overflowing
when the virtual height of the widget overflowed a 16-bit value.

Fixed the typemap that converts strings to wxColours to also accept
unicode.

Fixed problem where the wrong class name could sometimes be used for
OOR.

Fixed an interpreter lock problem in the __eq__ and __ne__ methods in
wxSize and etc.

Updated PyCrust to version 0.9

Instead of always logging C++ assertions, added wxPYAPP_ASSERT_LOG
flag to turn it on.  In most cases turning it into an exception (the
default behavior) is enough.  See below in the 2.3.4.1 notes for more
details.




2.4.0.6 (a.k.a. the I'm so stupid release)
-------
The new deprecation class for the old true/false symbols can now be
returned from OnInit.  And I promise to be sure I am testing what I
think I am testing in the future...



2.4.0.5 (a.k.a. the blame it on Kevin release)
-------
A few little but annoying bug fixes.

Updated pycolourchooser.

Updated to 0.9b of PyCrust.



2.4.0.4
-------
Added missing wxRect methods

Add OOR support for wxApp objects too.

Added wxCursorFromImage, which works on wxMSW and wxGTK so far.

All platforms now send EVT_DESTROY_WINDOW.  Be warned that at the time
the event is sent the window is in the process of being deconstructed,
and so calling some (most?) methods of the window itself may cause
problems.

Fixed SF Bug #689481, a method in the OGL wrappers was using the wrong
return type.
