@@ -1,1 +1,12 @@
-ver = '2.4.0.8p1'
+# This file was generated by setup.py...
+
+wxVERSION_STRING  = '2.4.0.8p1'
+wxMAJOR_VERSION   = 2
+wxMINOR_VERSION   = 4
+wxRELEASE_VERSION = 0
+wxSUBREL_VERSION  = 8
+
+wxVERSION = (wxMAJOR_VERSION, wxMINOR_VERSION, wxRELEASE_VERSION,
+             wxSUBREL_VERSION, 'p1')
+
+wxRELEASE_NUMBER = wxRELEASE_VERSION  # for compatibility
